--- a/maze_backtracking/maze_backtracking/maze_backtracking.csproj
+++ b/maze_backtracking/maze_backtracking/maze_backtracking.csproj
@@ -46,8 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Backtracking.cs" />
-    <Compile Include="Caminho.cs" />
+    <Compile Include="Labirinto.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
